--- a/templates/Reports.html
+++ b/templates/Reports.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reports</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" type="style/css" href="../templates/style/Reports.css">
+    <link rel="stylesheet" type="style/css" href="{{ url_for('static', filename='style/Reports.css') }}">
 </head>
 <body>
     <div class="navbar">
@@ -87,6 +87,6 @@
         <a href="/">Back to Dashboard</a>
     </div>
 
-    <script src="../templates/scripts/Reports.js"></script>
+    <script src="{{ url_for('static', filename='scripts/Reports.js') }}"></script>
 </body>
 </html>
