--- a/templates/files.html
+++ b/templates/files.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Files</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" type="style/css" href="../templates/style/files.css">
+    <link rel="stylesheet" type="style/css" href="{{ url_for('static', filename='style/files.css') }}">
 </head>
 <body>
     <div class="navbar">
@@ -37,6 +37,6 @@
 
         <a href="/">Back to Dashboard</a>
     </div>
-    <script src="../templates/scripts/files.js" ></script>
+    <script src="{{ url_for('static', filename='scripts/files.js') }}" ></script>
 </body>
 </html>
