--- a/templates/history.html
+++ b/templates/history.html
@@ -6,7 +6,7 @@
     <title>History</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- For chart trends -->
-    <link rel="stylesheet" type="style/css" href="../templates/style/history.css"> 
+    <link rel="stylesheet" type="style/css" href="{{ url_for('static', filename='style/history.css') }}"> 
 </head>
 <body>
     <div class="navbar">
@@ -53,6 +53,6 @@
         <a href="/">Back to Dashboard</a>
     </div>
 
-    <script src="../templates/scripts/history.js" ></script>
+    <script src="{{ url_for('static', filename='scripts/history.js') }}" ></script>
 </body>
 </html>
