--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" type="style/css" href="../templates/style/home.css">
+    <link rel="stylesheet" type="style/css" href="{{ url_for('static', filename='style/home.css') }}">
 </head>
 <body>
     <div class="navbar">
@@ -35,6 +35,6 @@
             <p>Manage and access files</p>
         </a>
     </div>
-    
+    <script src="{{ url_for('static', filename='scripts/home.js') }}"></script>
 </body>
 </html>
