--- a/templates/Reports.html
+++ b/templates/Reports.html
@@ -6,6 +6,41 @@
     <title>Reports</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
+<!--
+
+    Reports Page
+
+    This page displays all the reports submitted by students.
+    It has two sections: Submitted and Not Submitted.
+    The Submitted section displays all the students who have submitted their reports.
+    The Not Submitted section displays all the students who have not submitted their reports.
+
+    Each section has a card that displays the number of students and a table that shows the details of each student.
+
+    The details table has the following columns:
+    - Student Number
+    - Student Name
+    - Report Title
+    - Date Submitted (for Submitted section)
+    - Status (for Not Submitted section)
+
+    The page also has a button that redirects the user back to the dashboard.
+
+-->
+<!--------------------------------------------------------------------------------------------------------------->
+<!-- 
+
+HH    HH    HHHHHHHHH    HH        HH    HH
+HH    HH       HH        HHHH     HHH    HH
+HH    HH       HH        HH HH  HH HH    HH
+HHHHHHHH       HH        HH   HH   HH    HH
+HH    HH       HH        HH        HH    HH
+HH    HH       HH        HH        HH    HH
+HH    HH       HH        HH        HH    HHHHHHHH
+
+-->
+
 <body>
     <div class="navbar">
         <h1>Reports Page</h1>
@@ -85,6 +120,29 @@
 
         <a href="/">Back to Dashboard</a>
     </div>
+
+<!-- 
+
+HH    HH    HHHHHHHHH    HH        HH    HH
+HH    HH       HH        HHHH     HHH    HH
+HH    HH       HH        HH HH  HH HH    HH
+HHHHHHHH       HH        HH   HH   HH    HH
+HH    HH       HH        HH        HH    HH
+HH    HH       HH        HH        HH    HH
+HH    HH       HH        HH        HH    HHHHHHHH
+
+-->
+<!--------------------------------------------------------------------------------------------------------------->
+<!-- 
+
+     CCCCCCCC     CCCCCCCC     CCCCCCCC
+    CC          CC           CC
+   CC            CC           CC
+  CC              CCCCCCCC     CCCCCCCC
+   CC                    CC           CC
+    CC                  CC           CC
+     CCCCCCCC    CCCCCCCC     CCCCCCCC  
+-->
 
     <style>
         body {
@@ -176,6 +234,41 @@ a:hover {
 }
     </style>
 
+<!-- 
+
+     CCCCCCCC     CCCCCCCC     CCCCCCCC
+    CC          CC           CC
+   CC            CC           CC
+  CC              CCCCCCCC     CCCCCCCC
+   CC                    CC           CC
+    CC                  CC           CC
+     CCCCCCCC    CCCCCCCC     CCCCCCCC  
+-->
+<!--------------------------------------------------------------------------------------------------------------->
+<!-- 
+
+    JJJJJJJJJJJJ   JJJJJJJJJJ   
+          JJ      JJ
+          JJ       JJ
+          JJ        JJJJJJJJJ
+    J     JJ                JJ
+     JJ  JJ                JJ
+      JJJJ         JJJJJJJJJ 
+-->
+
     <script src="{{ url_for('static', filename='scripts/Reports.js') }}"></script>
+
+ <!-- 
+
+    JJJJJJJJJJJJ   JJJJJJJJJJ   
+          JJ      JJ
+          JJ       JJ
+          JJ        JJJJJJJJJ
+    J     JJ                JJ
+     JJ  JJ                JJ
+      JJJJ         JJJJJJJJJ 
+-->   
+<!--------------------------------------------------------------------------------------------------------------->
+
 </body>
 </html>
