moved js code into html code files

--- a/templates/files.html
+++ b/templates/files.html
@@ -135,6 +135,8 @@ a:hover {
 }
     </style>
 
-    <script src="{{ url_for('static', filename='scripts/files.js') }}" ></script>
+    <script>
+        
+    </script>
 </body>
 </html>
