--- a/templates/home.html
+++ b/templates/home.html
@@ -84,7 +84,9 @@
 }
     </style>
  
-    <script src="{{ url_for('static', filename='scripts/home.js') }}"></script>
+    <script>
+        
+    </script>
 
 </body>
 </html>
