--- a/templates/history.html
+++ b/templates/history.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- For chart trends -->
 </head>
+<!--------------------------------------------------------------------------------------------------------------->
+<!-- 
+
+HH    HH    HHHHHHHHH    HH        HH    HH
+HH    HH       HH        HHHH     HHH    HH
+HH    HH       HH        HH HH  HH HH    HH
+HHHHHHHH       HH        HH   HH   HH    HH
+HH    HH       HH        HH        HH    HH
+HH    HH       HH        HH        HH    HH
+HH    HH       HH        HH        HH    HHHHHHHH
+
+-->
 
 <body>
     <div class="navbar">
@@ -53,7 +65,28 @@
 
         <a href="/">Back to Dashboard</a>
     </div>
+    <!-- 
 
+HH    HH    HHHHHHHHH    HH        HH    HH
+HH    HH       HH        HHHH     HHH    HH
+HH    HH       HH        HH HH  HH HH    HH
+HHHHHHHH       HH        HH   HH   HH    HH
+HH    HH       HH        HH        HH    HH
+HH    HH       HH        HH        HH    HH
+HH    HH       HH        HH        HH    HHHHHHHH
+
+-->
+    <!--------------------------------------------------------------------------------------------------------------->
+    <!-- 
+
+     CCCCCCCC     CCCCCCCC     CCCCCCCC
+    CC          CC           CC
+   CC            CC           CC
+  CC              CCCCCCCC     CCCCCCCC
+   CC                    CC           CC
+    CC                  CC           CC
+     CCCCCCCC    CCCCCCCC     CCCCCCCC  
+-->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -132,7 +165,27 @@
             margin-top: 30px;
         }
     </style>
+    <!-- 
 
+     CCCCCCCC     CCCCCCCC     CCCCCCCC
+    CC          CC           CC
+   CC            CC           CC
+  CC              CCCCCCCC     CCCCCCCC
+   CC                    CC           CC
+    CC                  CC           CC
+     CCCCCCCC    CCCCCCCC     CCCCCCCC  
+-->
+    <!--------------------------------------------------------------------------------------------------------------->
+    <!-- 
+
+    JJJJJJJJJJJJ   JJJJJJJJJJ   
+          JJ      JJ
+          JJ       JJ
+          JJ        JJJJJJJJJ
+    J     JJ                JJ
+     JJ  JJ                JJ
+      JJJJ         JJJJJJJJJ 
+-->
     <script>
         // Example chart data (can be dynamically generated from backend)
         var ctx = document.getElementById('reportTrends').getContext('2d');
@@ -171,6 +224,17 @@
             }
         });
     </script>
+    <!-- 
+
+    JJJJJJJJJJJJ   JJJJJJJJJJ   
+          JJ      JJ
+          JJ       JJ
+          JJ        JJJJJJJJJ
+    J     JJ                JJ
+     JJ  JJ                JJ
+      JJJJ         JJJJJJJJJ 
+-->
+    <!--------------------------------------------------------------------------------------------------------------->
 </body>
 
 </html>
